--- a/src/snack.css
+++ b/src/snack.css
@@ -14,4 +14,11 @@ body {
 p {
    font-family: Helvetica, Arial, sans-serif;
   font-size: 14px;
+ align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  margin: auto;
+  max-width: 600px;
 }
